[project]
name = "anemic"
version = "0.0.1dev0"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
        "Development Status :: 1 - Planning",
        "Environment :: Console",
        "Framework :: Pyramid",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Internet :: WWW/HTTP :: WSGI",
        "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
        "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
        "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["web", "pyramid", "cli", "di", "ioc"]

[[project.authors]]
name = "Antti Haapala"
email = "antti.haapala@interjektio.fi"

[project.optional-dependencies]
dev = [
	"pytest",
        "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["anemic.*"]
namespaces = false
